--- a/Caseopgave/Properties/launchSettings.json
+++ b/Caseopgave/Properties/launchSettings.json
@@ -1,4 +1,20 @@
-﻿{
+{
+  "profiles": {
+    "Caseopgave": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
+    }
+  },
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -6,16 +22,6 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:2919",
       "sslPort": 44302
-    }
-  },
-  "profiles": {
-    "Caseopgave": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     }
   }
 }
