--- a/Caseopgave/appsettings.json
+++ b/Caseopgave/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MotorApiOptions": {
+    "Url": "https://v1.motorapi.dk",
+    "Token": "1vgvev0stet3du590vtabnzo401e4axm"
+  }
 }
