--- a/Caseopgave/BigSystems.Caseopgave.ParkingService.csproj
+++ b/Caseopgave/BigSystems.Caseopgave.ParkingService.csproj
@@ -11,12 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Caseopgave.CoreFunktionalitet\Caseopgave.CoreFunktionalitet.csproj" />
   </ItemGroup>
 
 </Project>
